# xibo-linux

./: .gitignore  Dockerfile  base.supp  build-portable.sh  install-dependencies-debian.sh
apt/: README.md  build-deb.sh  install-dependencies.sh  test-arch.sh  test-package.sh  xibo-wrapper.sh
apt/DEBIAN/: control  postinst  postrm
apt/dev-tools/: build-test-deb.sh  prepare-build.sh
apt/usr/share/applications/: xibo-options.desktop  xibo-player.desktop
player/: CMakeLists.txt  snap_run.sh
player/cms/: CollectionInterval.cpp
player/common/: CMakeLists.txt  PlayerError.hpp
player/common/crypto/: CryptoUtils.cpp  CryptoUtils.hpp
player/common/fs/: FilePath.hpp
player/common/logger/: XmlLoggerSink.hpp
player/common/parsing/: XmlDocVersion.hpp
player/common/storage/: RequiredItems.hpp
player/common/system/: HardwareKeyGenerator.cpp  HardwareKeyGenerator.hpp
player/common/types/: CMakeLists.txt  Color.hpp
player/common/types/internal/: ColorToHexConverter.hpp  Scheme.cpp
player/common/types/tests/: UriTests.hpp
player/config/: AppConfig.cpp  SettingsSerializer.hpp
player/control/media/: CMakeLists.txt
player/control/media/webview/: WebViewGtk.cpp
player/control/screenshot/: ScreenShoter.cpp
player/control/widgets/: KeyboardKey.cpp  KeyboardKey.hpp
player/stat/: CMakeLists.txt
player/stat/records/: LayoutRecord.hpp  MediaRecord.hpp  RecordType.hpp  Records.hpp
player/stat/storage/: DatabaseProvider.cpp  DatabaseProvider.hpp
player/watchdog/: CMakeLists.txt
snap/: snapcraft.yaml
